--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </a-scene>
 
     <div class="circle-crop">
-        <video id="circle-video" class="video-container" src="circle-video.mp4" autoplay loop muted></video>
+        <video id="circle-video" class="video-container" src="https://github.com/Weat-ctrl/TheAwakeningGOB/blob/main/giphy.gif" autoplay loop muted></video>
     </div>
 
     <script>
