--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             overflow: hidden;
             width: 300px;
             height: 300px;
+            background: none;
         }
         .video-container {
             width: 100%;
@@ -26,7 +27,7 @@
     <a-scene vr-mode-ui="enabled: false" embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
         <a-camera gps-camera rotation-reader></a-camera>
         <a-entity gps-entity-place="latitude: YOUR_LATITUDE; longitude: YOUR_LONGITUDE;" position="0 0 0">
-            <a-video src="#circle-video" position="0 1.5 -3" width="3" height="1.5" rotation="0 0 0"></a-video>
+            <a-video src="#circle-video" position="0 1.5 -3" width="3" height="3" material="shader: flat;" rotation="0 0 0"></a-video>
         </a-entity>
     </a-scene>
 
@@ -43,4 +44,4 @@
         };
     </script>
 </body>
-                                                                   </html>
+</html>
