--- a/index.html
+++ b/index.html
@@ -4,35 +4,18 @@
     <meta charset="utf-8">
     <title>Centered Video in AR</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            width: 100%;
-            height: 100%;
-        }
-        .video-container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 300px;
-            height: 300px;
-        }
-        video {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a-scene embedded arjs="sourceType: webcam;">
         <a-camera></a-camera>
         <a-entity>
-            <a-video src="https://github.com/Weat-ctrl/TheAwakeningGOB/blob/main/giphy.mp4" position="0 0 -2" width="3" height="3" rotation="0 0 0"></a-video>
+            <a-video src="" position="0 0 -2" width="3" height="3" rotation="0 0 0"></a-video>
         </a-entity>
     </a-scene>
+
+    <div class="video-container">
+        <video id="circle-video" src="circle-video.mp4" autoplay loop muted></video>
+    </div>
 </body>
 </html>
