--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a-scene embedded arjs="sourceType: webcam;">
         <a-camera></a-camera>
         <a-entity>
-            <a-video src="" position="0 0 -2" width="3" height="3" rotation="0 0 0"></a-video>
+            <a-video src="https://github.com/Weat-ctrl/TheAwakeningGOB/blob/main/giphy.mp4" position="0 0 -2" width="3" height="3" rotation="0 0 0"></a-video>
         </a-entity>
     </a-scene>
 
