--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <a-scene embedded arjs="sourceType: webcam;">
         <a-camera></a-camera>
-        <a-entity position="0 1 -3">
-            <a-video src="#circle-video" width="1" height="1" rotation="0 0 0"></a-video>
+        <a-entity>
+            <a-video src="https://weat-ctrl.github.io/TheAwakeningGOB/giphy.mp4" position="0 1.5 -3" width="3" height="3" rotation="0 0 0"></a-video>
         </a-entity>
     </a-scene>
 
