--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a-scene embedded arjs="sourceType: webcam;">
         <a-camera></a-camera>
         <a-entity>
-            <a-video src="https://weat-ctrl.github.io/TheAwakeningGOB/giphy.mp4" position="0 1.5 -3" width="3" height="3" rotation="0 0 0"></a-video>
+            <a-video src="#circle-video" position="0 1.5 -3" width="3" height="3" rotation="0 0 0"></a-video>
         </a-entity>
     </a-scene>
 
