--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs='sourceType: webcam;'>
     <a-assets>
-      <a-asset-item id="pigeon-gltf" src="path/to/your/pigeon.gltf"></a-asset-item>
+      <a-asset-item id="pigeon-gltf" src="https://raw.githubusercontent.com/Weat-ctrl/TheAwakeningGOB/pigeon.gltf"></a-asset-item>
     </a-assets>
 
     <a-entity id="pigeon" gps-entity-place gltf-model="#pigeon-gltf" animation-mixer></a-entity>
