--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mobile-console/dist/mobile-console.min.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs='sourceType: webcam;'>
+
     <a-assets>
-      <a-asset-item id="pigeon-gltf" src="https://raw.githubusercontent.com/Weat-ctrl/TheAwakeningGOB/pigeon.gltf"></a-asset-item>
+      <a-asset-item id="pigeon-gltf" src="path/to/your/pigeon.gltf"></a-asset-item>
     </a-assets>
 
     <a-entity id="pigeon" gps-entity-place gltf-model="#pigeon-gltf" animation-mixer></a-entity>
@@ -27,4 +29,4 @@
   <script src="mediapipe_hands.js"></script>
   <script src="script.js"></script>
 </body>
-                                                                                    </html>
+    </html>
