--- a/index.html
+++ b/index.html
@@ -3,30 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR.js with A-Frame and MediaPipe Hands</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
+  <title>Hand Landmarker</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div id="container">
+    <video id="webcam" autoplay playsinline></video>
+    <canvas id="output_canvas"></canvas>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mobile-console/dist/mobile-console.min.js"></script>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body style="margin: 0; overflow: hidden;">
-  <a-scene embedded arjs='sourceType: webcam;'>
-
-    <a-assets>
-      <a-asset-item id="pigeon-gltf" src="path/to/your/pigeon.gltf"></a-asset-item>
-    </a-assets>
-
-    <a-entity id="pigeon" gps-entity-place gltf-model="#pigeon-gltf" animation-mixer></a-entity>
-
-    <a-camera gps-camera rotation-reader></a-camera>
-  </a-scene>
-  <script src="gestures.js"></script>
-  <script src="mediapipe_hands.js"></script>
   <script src="script.js"></script>
 </body>
     </html>
