--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-    <!-- Pigeon Model (will be placed dynamically) -->
+    <!-- Pigeon Model -->
     <a-entity
       id="pigeon"
       gltf-model="https://raw.githubusercontent.com/Weat-ctrl/TheAwakeningGOB/pigeon.gltf"
@@ -29,4 +29,4 @@
     <a-entity camera></a-entity>
   </a-scene>
 </body>
-    </html>
+</html>
