--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Pigeon Model -->
     <a-entity
       id="pigeon"
-      gltf-model="https://raw.githubusercontent.com/Weat-ctrl/TheAwakeningGOB/Pigeon.gltf"
+      gltf-model=("https://raw.githubusercontent.com/Weat-ctrl/TheAwakeningGOB/Pigeon.gltf")
       scale="0.1 0.1 0.1"
       animation-mixer="clip: Flying_Idle; loop: repeat;"
     >
