--- a/index.html
+++ b/index.html
@@ -3,30 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Location-Based AR Pigeon</title>
-  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <title>Three.js + WebRTC + MediaPipe Hands</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
+</head>
+<body>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
   <script src="script.js"></script>
-</head>
-<body>
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-    <!-- Pigeon Model -->
-    <a-entity
-      id="pigeon"
-      gltf-model=("https://raw.githubusercontent.com/Weat-ctrl/TheAwakeningGOB/Pigeon.gltf")
-      scale="0.1 0.1 0.1"
-      animation-mixer="clip: Flying_Idle; loop: repeat;"
-    >
-      <!-- Blue Smoke Particle System -->
-      <a-entity id="smoke"></a-entity>
-    </a-entity>
-    <!-- Camera -->
-    <a-entity camera></a-entity>
-  </a-scene>
 </body>
-</html>
+    </html>
