--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   </style>
 </head>
 <body>
+  <!-- Load Three.js -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
+
+  <!-- Load MediaPipe dependencies -->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/gesture_recognizer/gesture_recognizer.js"></script>
+
+  <!-- Load your script -->
   <script src="script.js"></script>
 </body>
-    </html>
+                            </html>
