--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Isometric Floor Scene</title>
+    <title>The Awakening GOB - Isometric Ruins</title>
     <link rel="stylesheet" href="style.css">
+    
     <script type="importmap">
         {
             "imports": {
-                "three": "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js",
-                "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/"
+                "three": "https://cdn.jsdelivr.net/npm/three@0.165.0/build/three.module.js",
+                "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.165.0/examples/jsm/"
             }
         }
     </script>
 </head>
 <body>
+    <div id="loading-screen" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: #222; color: white; display: flex; flex-direction: column; justify-content: center; align-items: center; font-family: sans-serif; z-index: 100;">
+        <p>Loading Assets...</p>
+        <div style="width: 50%; height: 10px; background: #555; border-radius: 5px;">
+            <div id="loading-progress" style="height: 100%; width: 0%; background: #007bff; border-radius: 5px;"></div>
+        </div>
+        <p><span id="loaded-items">0</span> / <span id="total-items">0</span></p>
+    </div>
+
     <script type="module" src="script.js"></script>
 </body>
-</html>
+            </html>
